# Saas_dashboard

./: .gitignore  README.md
saas-backend/: Dockerfile  alembic.ini  demo_seed.py  docker-compose.yml  full_seed.py  patch_metrics.py  pyproject.toml  seed.py  test_api_key.py  traffic_simulator.py
saas-backend/.github/workflows/: ci.yml
saas-backend/app/: config.py  generate_mock_data.py  main.py
saas-backend/app/api/v1/: alerts.py  api_keys.py  audit_logs.py  auth.py  billing.py  integrations.py  metrics.py  router.py  team.py  tenant.py  user_webhooks.py  webhooks.py
saas-backend/app/core/: circuit_breaker.py  encryption.py  exceptions.py  idempotency.py  locks.py  metrics.py  middleware.py  security.py  telemetry.py
saas-backend/app/db/: base.py  clickhouse.py  mixins.py
saas-backend/app/kafka/: consumer.py
saas-backend/app/models/: __init__.py  alert.py  api_key.py  audit_log.py  integration.py  metric_event.py  subscription.py  tenant.py  user.py  webhook.py
saas-backend/app/schemas/: __init__.py  alert.py  audit_log.py  auth.py  integration.py  metrics.py  subscription.py  tenant.py  user.py  webhook.py
saas-backend/app/services/: analytics_service.py  auth_service.py  billing_service.py  metrics_service.py  tenant_service.py
saas-backend/app/utils/: audit.py  cache.py  compliance.py  pagination.py
saas-backend/app/workers/: alert_checker.py  celery_app.py  clickhouse_sync.py  metric_aggregator.py  ml_tasks.py  report_generator.py
saas-backend/deploy/: docker-compose.prod.yml  nginx.conf
saas-backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_metrics.py  test_subscriptions.py
(+88 files in other folders)
